Fix text stroke overlapping text fill bug

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -35,7 +35,8 @@ h1 {
     cursor: pointer;
     font-size: 5rem;
     font-weight: bold;
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 2px black;
+    paint-order: stroke fill;
 }
 
 @media (max-width: 768px) {
